--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
 title: Reconstruction Pedagogy: Understanding of Race and Identity through Education during Reconstruction
-description: My website for my thesis about pedagogical approaches to teaching about the Reconstruction Era from the 19th century to 21st century America history. 
+description: "My website for my thesis about pedagogical approaches to teaching about the Reconstruction Era from the 19th century to 21st century America history." 
