--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://mallaryrawls.github.io/hugo/"
+baseURL = "https://mallaryrawls.github.io/HUGO/"
 languageCode = "en-us"
 title = "Mallary Rawls"
 theme = "ananke"
